# 2024-08-superposition

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  4naly3er-report.md  AUTHORS.md  Dockerfile.graphql  Dockerfile.ingestor  FAQ.md  HACKING.md  Makefile  NOTICE.txt  README-sponsor.md  README.md  SECURITY  codecov.yml  go.mod  go.sum  out_of_scope.txt  scope.txt
audits/: README.md  index.html
cmd/: README.md  build.mk  golang.mk
cmd/faucet.superposition/: .gitignore  Makefile  README.md  deploy-lambda.sh  gqlgen.yml  main.go  schema.graphqls
cmd/graphql.ethereum/: .dockerignore  .gitignore  (+6 more)
config/: README.md  pools.toml
db/: Dockerfile  Dockerfile.migrator  README.md  create.sh  docker.sh  init-database.sh  migrate.sh  update_and_migrate.sh
discord-export/: Code4rena - ARCHIVE-PUBLIC - superposition-aug23 [1269057494437728327].html  Code4rena - ARCHIVE-PUBLIC - superposition-aug23 [1269057494437728327].txt
features/: features.json
pkg/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SEAWATER_TUTORIAL.md  book.toml  config.mk  deploy-seawater.sh  deploy-solidity.sh  deploy.sh  foundry.toml  package-lock.json  package.json  test-deploy.sh  tests.sh  tsconfig.json
pkg/.cargo/: config.toml
pkg/ethers-tests/: seawater.ts
pkg/koko/: README.md
pkg/leo/: Cargo.toml
pkg/leo/proptest-regressions/: lib.txt
pkg/leo/src/: calldata.rs  erc20.rs  error.rs  events.rs  host.rs  immutables.rs  lib.rs  main.rs  maths.rs  nft_manager.rs  seawater.rs
pkg/leo/tests/: lib.rs
pkg/seawater/: Cargo.toml  README.md
pkg/seawater/proptest-regressions/maths/: sqrt_price_math.txt
pkg/seawater/src/: erc20.rs  error.rs  eth_serde.rs  events.rs  host_erc20.rs  host_test_shims.rs  host_test_utils.rs  immutables.rs  lib.rs  main.rs  permit2_types.rs  pool.rs  position.rs  test_shims.rs  test_utils.rs  tick.rs  types.rs  wasm_erc20.rs
pkg/seawater/src/maths/: bit_math.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs  utils.rs
pkg/seawater/tests/: lib.rs  pools.rs  reference_impls.proptest-regressions  reference_impls.rs
pkg/seawater/tests/reference/: full_math.rs  mod.rs  tick_math.rs
pkg/sol/: Faucet.sol  IERC20.sol  IERC721Metadata.sol  IERC721TokenReceiver.sol  IFaucet.sol  ILeoEvents.sol  ISeawater.sol  ISeawaterAMM.sol  ISeawaterEvents.sol  ISeawaterExecutors.sol  ISeawaterMigrations.sol  OwnershipNFTs.sol  SeawaterAMM.sol
pkg/test/: LightweightERC20.sol  permit2.sol
static/: empty
tools/: ethereum-selector-mine.go
web/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  codegen.ts  jest.config.js  next.config.js  package.json  playwright.config.ts  playwright.teardown.js  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
(+248 files in other folders)
