[workspace]

resolver = "2"

members = [
    "seawater",
    "leo",
]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[workspace.dependencies]
stylus-sdk = "0.5.0"
thiserror = "1.0.48"
tiny-keccak = "2.0.2"
ruint = { version = "1.11.0", features = ["num-traits"] }
num-traits = "0.2.19"
alloy-sol-types = "0.3.1"
ruint-macro = "1.1.0"
keccak-const = "0.2.0"
lol_alloc = "0.4.0"
const-hex = { version = "1.10.0", features = ["alloc"] }

[patch.crates-io]
stylus-sdk = { git = "https://github.com/fluidity-money/stylus-sdk-rs", branch = "feat-raw-fn" }
stylus-proc = { git = "https://github.com/fluidity-money/stylus-sdk-rs", branch = "feat-raw-fn" }
