[package]
name = "leo"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "libleo"
edition = "2021"

[[bin]]
name = "leo"
path = "src/main.rs"

[dependencies]
stylus-sdk = { workspace = true }
alloy-sol-types.workspace = true
ruint.workspace = true
ruint-macro.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
lol_alloc.workspace = true
keccak-const.workspace = true
const-hex.workspace = true
num-traits.workspace = true

[dev-dependencies]
rand = "0.8.5"
proptest = "1.5.0"
const-hex.workspace = true

[features]
export-abi = ["stylus-sdk/export-abi"]
testing = []
